# sistrecommendVideogames

./: .gitignore  app.py  knn.py  pyproject.toml  requirements.txt
datos/: data_frame_final_limpio.parquet  modelo_recomendacion2.sav  notebook_eda_etl_ml.ipynb
