[tool.poetry]
name = "data-engineer-on-premise"
version = "0.1.0"
description = "Example for how work with docker python and poetry"
authors = ["Pridewolf <agussamperi@gmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.0"
seaborn = "^0.13.2"
psycopg2 = "^2.9.9"
streamlit = "^1.31.1"
scikit-learn = "^1.4.1.post1"
joblib = "^1.3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
